Added notifications and tweaked profile settings
